# drf-scoped-permissions

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  conftest.py  pyproject.toml  pytest.ini  ruff.toml  setup.py
.github/workflows/: ci.yml  publish.yml
drf_scoped_permissions/: __init__.py  admin.py  apps.py  authentication.py  models.py  permissions.py  utils.py
drf_scoped_permissions/management/commands/: list_scopes.py  migrate_api_keys.py
drf_scoped_permissions/migrations/: 0001_initial.py
examples/: basic_example.md
scripts/: check-version.sh  lint.sh  pre-commit.sh
tests/: conftest.py  settings.py  test_admin.py  test_authentication.py  test_commands.py  test_models.py  test_permissions.py  test_utils.py  urls.py  views.py
