[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drf-scoped-permissions"
version = "0.3.0"
description = "Resource-scoped API key and group permissions for Django REST Framework. Built for startups moving fast."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Frankapps", email = "hello@frankapps.com"}
]
keywords = ["django", "rest", "framework", "api", "key", "permissions", "scopes", "authorization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Django>=4.2",
    "djangorestframework>=3.14",
    "djangorestframework-api-key>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "django-stubs>=4.2",
    "djangorestframework-stubs>=3.14",
]
jwt = [
    "djangorestframework-simplejwt>=5.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.2",
]

[project.urls]
Homepage = "https://github.com/frankapps-io/drf-scoped-permissions"
Documentation = "https://github.com/frankapps-io/drf-scoped-permissions"
Repository = "https://github.com/frankapps-io/drf-scoped-permissions"
"Bug Tracker" = "https://github.com/frankapps-io/drf-scoped-permissions/issues"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["."]
addopts = "--cov=drf_scoped_permissions --cov-report=html --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (black handles this)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["drf_scoped_permissions"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
# Ignore third-party library type issues
ignore_errors = false

[[tool.mypy.overrides]]
module = ["rest_framework_api_key.*"]
ignore_missing_imports = true
ignore_errors = true

[tool.django-stubs]
django_settings_module = "tests.settings"
